Started the implementation of the CSS Added a Calendar png to root Added a div class image in index html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href='https://fonts.googleapis.com/css?family=Open+Sans:600italic,700,600,400' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+        <link href='https://fonts.googleapis.com/css?family=Rubik' rel='stylesheet'>
 		<link rel="stylesheet" href="css/mainpage.css" />
 		<script src="js/main.js"></script>
 	</head>
@@ -16,6 +18,10 @@
 	<header>
 		<h1 id="title">Class Schedule Viewer</h1>
 	</header>
+	
+	<div class="image">
+		<img src="Calendar.png" alt="calendar">
+	</div>
 
 	<div class="page-container">
 		<div class="calendar col-lg-6">
@@ -301,7 +307,7 @@
 				</tr>
 							</table>
 		</div>
-		<div class="navigation col-lg-6">
+		<div class="navigation-col-lg-6">
 			<textarea id="schedule" autofocus="true" cols="106" placeholder="Paste AISIS schedule here" rows="10"></textarea>
 			<div class="button-list">
 				<button class="fill-btn btn-primary btn-lg" id="step4" type="button" data-toggle="modal" data-target="#myModal">Fill</button>
