Added Classes button with dropown

--- a/index.html
+++ b/index.html
@@ -329,6 +329,17 @@
 				<br/>
 				<br/>
 				<button class="dl-btn btn-primary btn-lg" id="step6" type="button" data-toggle="modal" data-target="#myModal" onclick="timeTableToImage()">Download</button>
+				<br/>
+				<br/>
+				<div class="dropdown">
+				<button class="schedule-btn btn-primary btn-lg" id="step7" type="button" data-toggle="modal" data-target="#myModal">Classes</button>
+					<div class="schedule-content">
+						<a href="#">DISCS</a>
+						<a href="#">Physics</a>
+						<a href="#">PE</a>
+						<a href="#">SocSci</a>
+					</div>
+				</div>
 			</div>
 
 			<div class="infosheet">
