Changed button layouts in css

--- a/index.html
+++ b/index.html
@@ -322,17 +322,17 @@
 		<div class="navigation-col-lg-6">
 			<textarea id="schedule" autofocus="true" cols="106" placeholder="Paste AISIS schedule here" rows="10"></textarea>
 			<div class="button-list">
-				<button class="fill-btn btn-primary btn-lg" id="step4" type="button" data-toggle="modal" data-target="#myModal">Fill</button>
+				<button class="fill-btn btn-primary btn-lg" id="step4"  style="margin:5px;" type="button" data-toggle="modal" data-target="#myModal">Fill</button>
 				<br/>
 				<br/>
-				<button class="reset-btn btn-warning btn-lg" id="step5">Reset</button>
+				<button class="reset-btn btn-warning btn-lg"  style="margin:5px;" id="step5">Reset</button>
 				<br/>
 				<br/>
-				<button class="dl-btn btn-primary btn-lg" id="step6" type="button" data-toggle="modal" data-target="#myModal" onclick="timeTableToImage()">Download</button>
+				<button class="dl-btn btn-primary btn-lg"  style="margin:5px;" id="step6" type="button" data-toggle="modal" data-target="#myModal" onclick="timeTableToImage()">Download</button>
 				<br/>
 				<br/>
 				<div class="dropdown">
-				<button class="schedule-btn btn-primary btn-lg" id="step7" type="button" data-toggle="modal" data-target="#myModal">Classes</button>
+				<button class="schedule-btn btn-primary btn-lg" id="step7"  style="margin:5px;" type="button" data-toggle="modal" data-target="#myModal">Classes</button>
 					<div class="schedule-content">
 						<a href="#">DISCS</a>
 						<a href="#">Physics</a>
