Add more schedules in index.html

--- a/index.html
+++ b/index.html
@@ -333,11 +333,49 @@
 				<br/>
 				<div class="dropdown">
 				<button class="schedule-btn btn-primary btn-lg" id="step7"  style="margin:5px;" type="button" data-toggle="modal" data-target="#myModal">Classes</button>
-					<div class="schedule-content">
-						<a href="#">DISCS</a>
+					<div class="schedule-content" type="button-list">
+						<a href="#">Biology</a>
+						<a href="#">Chemistry</a>
+						<a href="#">Chinese Studies Program</a>
+						<a href="#">Citizens Military Training</a>
+						<a href="#">Communication</a>
+						<a href="#">Developement Studies Program</a>
+						<a href="#">Economics</a>
+						<a href="#">Electornics, Computer, and Communications Eng.</a>
+						<a href="#">English</a>
+						<a href="#">Environmental Science</a>
+						<a href="#">European Studies</a>
+						<a href="#">Filipino</a>
+						<a href="#">Finance and Accounting</a>
+						<a href="#">Fine Arts</a>
+						<a href="#">Health Sciences Program</a>
+						<a href="#">History</a>
+						<a href="#">Humanities</a>
+						<a href="#">Information Systems and Computer Science</a>
+						<a href="#">INTAC</a>
+						<a href="#">Interdisciplinary Studies Program</a>
+						<a href="#">Japanese Studies Program</a>
+						<a href="#">Korean Studies Program</a>
+						<a href="#">Leadership and Strategy</a>
+						<a href="#">Marketing and Law</a>
+						<a href="#">Mathematics</a>
+						<a href="#">Modern Lanugages</a>
+						<a href="#">National Service Training Program (ADAST)</a>
+						<a href="#">National Service Training Program (OSCI)</a>
+						<a href="#">NSTP</a>
+						<a href="#">Office of Social Concern and Involvement</a>
+						<a href="#">Pastoral Studies</a>
+						<a href="#">Philosophy</a>
+						<a href="#">Physical Education</a>
 						<a href="#">Physics</a>
-						<a href="#">PE</a>
-						<a href="#">SocSci</a>
+						<a href="#">Political Science</a>
+						<a href="#">Psychology</a>
+						<a href="#">Quantitative Methods and Information Technology</a>
+						<a href="#">Science Block</a>
+						<a href="#">Social Sciences</a>
+						<a href="#">Sociology/Anthropology</a>
+						<a href="#">Theology</a>
+						<a href="#">Theology and Ministry Program</a>
 					</div>
 				</div>
 			</div>
