commented out classes dropdown

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
 				<button class="dl-btn btn-primary btn-lg"  style="margin:5px;" id="step6" type="button" data-toggle="modal" data-target="#myModal" onclick="timeTableToImage()">Download</button>
 				<br/>
 				<br/>
-				<div class="dropdown">
+				<!-- <div class="dropdown">
 				<button class="schedule-btn btn-primary btn-lg" id="step7"  style="margin:5px;" type="button" data-toggle="modal" data-target="#myModal">Classes</button>
 					<div class="schedule-content" type="button-list">
 						<a href="#">Biology</a>
@@ -375,7 +375,7 @@
 						<a href="#">Theology</a>
 						<a href="#">Theology and Ministry Program</a>
 					</div>
-				</div>
+				</div> -->
 			</div>
 
 			<div class="infosheet">
